--- a/ERP/Core.Erp.Web/Reportes/CuentasPorCobrar/CXC_009_Rpt.resx
+++ b/ERP/Core.Erp.Web/Reportes/CuentasPorCobrar/CXC_009_Rpt.resx
@@ -120,4 +120,9 @@
   <metadata name="objectDataSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="xrTableCell38.Text" xml:space="preserve">
+    <value>En caso de existir alguna discrepancia con nuestro estado de cuenta, le agradeceriamos que se comunique con nosotros a los teléfonos: 042221362, con un máximo de quince dias, caso contrario asumimos están de acuerdo con nuestro saldo
+
+Atentamente,</value>
+  </data>
 </root>
